# relic

./: .editorconfig  .gitignore  .indent.pro  .travis.yml  CMakeLists.txt  COPYRIGHT  README.md  copyright.txt  old.txt  patch  script.sed
src/: CMakeLists.txt  relic_bench.c  relic_conf.c  relic_core.c  relic_err.c  relic_lzcnt.c  relic_pool.c  relic_test.c  relic_trace.c  relic_util.c
src/arch/: lzcnt.inc  relic_arch_a64.c  relic_arch_arm.c  relic_arch_avr.c  relic_arch_msp.c  relic_arch_none.c  relic_arch_x64.c  relic_arch_x86.c  tzcnt.inc
src/bc/: relic_bc_aes.c  rijndael-api-fst.h
src/bn/: relic_bn_add.c  relic_bn_cmp.c  relic_bn_div.c  relic_bn_factor.c  relic_bn_gcd.c  relic_bn_inv.c  relic_bn_lag.c  relic_bn_lcm.c  relic_bn_mem.c  relic_bn_mod.c  relic_bn_mul.c  relic_bn_mxp.c  relic_bn_mxp_sim.c  relic_bn_prime.c  relic_bn_rec.c  relic_bn_shift.c  relic_bn_smb.c  relic_bn_sqr.c  relic_bn_srt.c  relic_bn_util.c
src/cp/: relic_cp_bbs.c  relic_cp_bdpe.c  relic_cp_bgn.c  relic_cp_bls.c  relic_cp_chmklhs.c  relic_cp_cls.c  relic_cp_cmlhs.c  relic_cp_ecdh.c  relic_cp_ecdsa.c  relic_cp_ecies.c  relic_cp_ecmqv.c  relic_cp_ecss.c  relic_cp_elgamal.c  relic_cp_ers.c  relic_cp_etrs.c  relic_cp_ghpe.c  relic_cp_ibe.c  relic_cp_ipa.c  relic_cp_lapsi.c  relic_cp_mklhs.c  relic_cp_mpss.c  relic_cp_oprf.c  relic_cp_pbgs.c  relic_cp_pbpsi.c  relic_cp_pcdel.c  relic_cp_pdbat.c  relic_cp_ped.c  relic_cp_phpe.c  relic_cp_pok.c  relic_cp_pss.c  relic_cp_rabin.c  relic_cp_rsa.c  relic_cp_rsapsi.c  relic_cp_shipsi.c  relic_cp_shpe.c  relic_cp_smklhs.c  relic_cp_smlers.c  relic_cp_sok.c  relic_cp_sokaka.c  relic_cp_vbnn.c  (+2 more)
src/dv/: relic_dv_mem.c  relic_dv_util.c
src/eb/: relic_eb_add.c  relic_eb_cmp.c  relic_eb_curve.c  relic_eb_dbl.c  relic_eb_frb.c  relic_eb_hlv.c  relic_eb_map.c  relic_eb_mul.c  relic_eb_mul_fix.c  relic_eb_mul_sim.c  relic_eb_neg.c  relic_eb_norm.c  relic_eb_param.c  relic_eb_pck.c  relic_eb_util.c
src/ed/: relic_ed_add.c  relic_ed_cmp.c  relic_ed_curve.c  relic_ed_dbl.c  relic_ed_map.c  relic_ed_mul.c  relic_ed_mul.c.old  relic_ed_mul_fix.c  relic_ed_mul_sim.c  relic_ed_neg.c  relic_ed_norm.c  relic_ed_param.c  relic_ed_pck.c  relic_ed_serialize.c  relic_ed_util.c
src/ep/: relic_ep_add.c  relic_ep_cmp.c  relic_ep_curve.c  relic_ep_dbl.c  relic_ep_map.c  relic_ep_mul.c  relic_ep_mul_cof.c  relic_ep_mul_fix.c  relic_ep_mul_sim.c  relic_ep_neg.c  relic_ep_norm.c  relic_ep_param.c  relic_ep_pck.c  relic_ep_psi.c  relic_ep_tpl.c  relic_ep_util.c
src/epx/: relic_ep2_add.c  relic_ep2_cmp.c  relic_ep2_curve.c  relic_ep2_dbl.c  relic_ep2_frb.c  relic_ep2_map.c  relic_ep2_mul.c  relic_ep2_mul_cof.c  relic_ep2_mul_fix.c  relic_ep2_mul_sim.c  relic_ep2_neg.c  relic_ep2_norm.c  relic_ep2_pck.c  relic_ep2_util.c  relic_ep3_add.c  relic_ep3_cmp.c  relic_ep3_curve.c  relic_ep3_dbl.c  relic_ep3_frb.c  relic_ep3_map.c  relic_ep3_mul.c  relic_ep3_mul_cof.c  relic_ep3_mul_fix.c  relic_ep3_mul_sim.c  relic_ep3_neg.c  relic_ep3_norm.c  relic_ep3_util.c  relic_ep4_add.c  relic_ep4_cmp.c  relic_ep4_curve.c  relic_ep4_dbl.c  relic_ep4_frb.c  relic_ep4_map.c  relic_ep4_mul.c  relic_ep4_mul_cof.c  relic_ep4_mul_fix.c  relic_ep4_mul_sim.c  relic_ep4_neg.c  relic_ep4_norm.c  relic_ep4_util.c  (+13 more)
src/fb/: relic_fb_add.c  relic_fb_cmp.c  relic_fb_exp.c  relic_fb_inv.c  relic_fb_itr.c  relic_fb_mul.c  relic_fb_param.c  relic_fb_poly.c  relic_fb_rdc.c  relic_fb_shift.c  relic_fb_slv.c  relic_fb_sqr.c  relic_fb_srt.c  relic_fb_trc.c  relic_fb_util.c
src/fbx/: relic_fb2_inv.c  relic_fb2_mul.c  relic_fb2_slv.c  relic_fb2_sqr.c  relic_fb4_mul.c  relic_fbx_exp.c  relic_fbx_frb.c  relic_fbx_inv.c  relic_fbx_slv.c  relic_fbx_sqr.c
src/fp/: relic_fp_add.c  relic_fp_cmp.c  relic_fp_crt.c  relic_fp_div.c  relic_fp_exp.c  relic_fp_inv.c  relic_fp_mul.c  relic_fp_param.c  relic_fp_prime.c  relic_fp_rdc.c  relic_fp_shift.c  relic_fp_smb.c  relic_fp_sqr.c  relic_fp_srt.c  relic_fp_util.c
src/fpx/: relic_fp12_mul.c  relic_fp12_sqr.c  relic_fp16_mul.c  relic_fp16_sqr.c  relic_fp18_mul.c  relic_fp18_sqr.c  relic_fp24_mul.c  relic_fp24_sqr.c  relic_fp2_mul.c  relic_fp2_sqr.c  relic_fp3_mul.c  relic_fp3_sqr.c  relic_fp48_mul.c  relic_fp48_sqr.c  relic_fp4_mul.c  relic_fp4_sqr.c  relic_fp54_mul.c  relic_fp54_sqr.c  relic_fp6_mul.c  relic_fp6_sqr.c  relic_fp8_mul.c  relic_fp8_sqr.c  relic_fp9_mul.c  relic_fp9_sqr.c  relic_fpx_add.c  relic_fpx_cmp.c  relic_fpx_crt.c  relic_fpx_cyc.c  relic_fpx_exp.c  relic_fpx_field.c  relic_fpx_frb.c  relic_fpx_inv.c  relic_fpx_pck.c  relic_fpx_rdc.c  relic_fpx_srt.c  relic_fpx_util.c
src/md/: blake2.h  relic_md_blake2s.c  relic_md_hmac.c  relic_md_kdf.c  relic_md_mgf.c  relic_md_sha1.c  relic_md_sha224.c  relic_md_sha256.c  relic_md_sha384.c  relic_md_sha512.c  relic_md_xmd.c  relic_md_xof.c  sha.h  sha224-256.c  sha384-512.c
src/mpc/: relic_mpc_mt.c  relic_mpc_pc.c  relic_mpc_sss.c  relic_mt_gen.c  relic_mt_mpc.c  relic_pc_mpc.c
src/pc/: relic_pc_core.c  relic_pc_exp.c  relic_pc_mpc.c  relic_pc_param.c  relic_pc_util.c
src/pp/: relic_pp_add.c  relic_pp_add_k1.c  relic_pp_add_k12.c  relic_pp_add_k16.c  relic_pp_add_k18.c  relic_pp_add_k2.c  relic_pp_add_k24.c  relic_pp_add_k3.c  relic_pp_add_k48.c  relic_pp_add_k54.c  relic_pp_add_k8.c  relic_pp_dbl.c  relic_pp_dbl_k1.c  relic_pp_dbl_k12.c  relic_pp_dbl_k16.c  relic_pp_dbl_k18.c  relic_pp_dbl_k2.c  relic_pp_dbl_k24.c  relic_pp_dbl_k3.c  relic_pp_dbl_k48.c  relic_pp_dbl_k54.c  relic_pp_dbl_k8.c  relic_pp_exp.c  relic_pp_exp_k1.c  relic_pp_exp_k12.c  relic_pp_exp_k16.c  relic_pp_exp_k18.c  relic_pp_exp_k2.c  relic_pp_exp_k24.c  relic_pp_exp_k3.c  relic_pp_exp_k48.c  relic_pp_exp_k54.c  relic_pp_exp_k8.c  relic_pp_map.c  relic_pp_map_k1.c  relic_pp_map_k12.c  relic_pp_map_k16.c  relic_pp_map_k18.c  relic_pp_map_k2.c  relic_pp_map_k24.c  (+5 more)
src/rand/: relic_rand_call.c  relic_rand_core.c  relic_rand_fips.c  relic_rand_hash.c  relic_rand_hashd.c  relic_rand_rdrnd.c  relic_rand_udev.c
src/tmpl/: relic_ep_add_tmpl.h  relic_ep_dbl_tmpl.h  relic_ep_map_tmpl.h  relic_ep_tpl_tmpl.h  relic_tmpl_map.h
(+1304 files in other folders)
